--- a/project.css
+++ b/project.css
@@ -8,48 +8,78 @@ body{
     display: flex;
 }
 .container{
+    width: fit-content;
+    height: fit-content;
+}
+form{
     background-color: white;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     margin-left: 25%;
+    width: fit-content;
 }
 #bluebar{
     background-color: #48A5EA;
-    position: fixed;
+    position:fixed;
     top: 0;
     border-right: 0;
     left: 0;
     width: 25%;
     height: 100%;
-    padding: 20px;
-    display: inline-block;
+    padding: 1px;
+    display: inline-flex;
 }
-h1{
+h2{
     color: #48A5EA;
-    border-bottom: outset;
+    padding: 10px;
 }
 #submit{
     border-radius: 20px;
     background-color: #48A5EA;
     color: white;
     border: #48A5EA;
-    padding: 5px;
-    margin-left: 5px;
+    padding: 10px;
+    margin-left: 70%;
 }
-#reset{
+#reset{    
+    border-radius: 20px;
     background-color: white;
-    border-color: white;
     color: grey;
     border: 0;
+    padding: 10px;
+}
+button{
+    display: inline-flex;
+}
+button:hover{
+    outline: 1px solid #48A5EA;
+}
+.input-control{
+    display: inline-flex;
+    padding: 1%;
 }
 input{
-    padding: 5px;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom:1px solid lightgray;
+    width: fit-content;
 }
-select{
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
+input:focus{
+    outline: none;
+    border-bottom:1px solid #48A5EA;
+}
+input:focus::placeholder{
+    color: transparent;
+}
+#main-section{
+    border-bottom: 1px solid lightgray;    
+    border-top: 1px solid lightgray;
+    width: fit-content;
+}
+div{
+    margin: 5px;
+}
+i{
+    color: transparent;
 }
