--- a/project.css
+++ b/project.css
@@ -4,30 +4,30 @@
 }
 body{
     background-color: lightgray;
-    align-items: center;
-    display: flex;
 }
 .container{
     width: fit-content;
     height: fit-content;
+    align-items: center;
+    justify-content: center;
+    margin-left: 25%;
 }
 form{
     background-color: white;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    margin-left: 25%;
-    width: fit-content;
+    width: 100%;
+    padding: 5px;
 }
 #bluebar{
     background-color: #48A5EA;
-    position:fixed;
+    position: fixed;
     top: 0;
     border-right: 0;
     left: 0;
     width: 25%;
     height: 100%;
     padding: 1px;
-    display: inline-flex;
 }
 h2{
     color: #48A5EA;
@@ -39,17 +39,18 @@ h2{
     color: white;
     border: #48A5EA;
     padding: 10px;
-    margin-left: 70%;
+    margin-left: 55%;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 #reset{    
     border-radius: 20px;
     background-color: white;
     color: grey;
     border: 0;
-    padding: 10px;
 }
 button{
     display: inline-flex;
+    padding: 10px;
 }
 button:hover{
     outline: 1px solid #48A5EA;
@@ -62,8 +63,7 @@ input{
     border-top: none;
     border-right: none;
     border-left: none;
-    border-bottom:1px solid lightgray;
-    width: fit-content;
+    border-bottom: 1px solid lightgray;
 }
 input:focus{
     outline: none;
@@ -71,6 +71,11 @@ input:focus{
 }
 input:focus::placeholder{
     color: transparent;
+}
+label{
+    color: gray;
+    font-size: small;
+    display: inline-flex;
 }
 #main-section{
     border-bottom: 1px solid lightgray;    
@@ -80,6 +85,7 @@ input:focus::placeholder{
 div{
     margin: 5px;
 }
-i{
-    color: transparent;
+.error{    
+    font-size: xx-small;
+    color: red;
 }
